--- a/Assignment 1 (Express Portfolio)/views/Content/about.ejs
+++ b/Assignment 1 (Express Portfolio)/views/Content/about.ejs
@@ -1,3 +1,4 @@
+<!--Mitkumar Malavia, 301214375, 05/10/2021-->
 <html>
 
 <head>
@@ -23,6 +24,7 @@
         }
     </style>
 </head>
+<!--About Page containing my recent photo and introduction.-->
 
 <body background="Assets/images/aboutbg.jpg">
     <h1 style="color:aliceblue;">About me</h1>
