--- a/Assignment 1 (Express Portfolio)/views/Content/home.ejs
+++ b/Assignment 1 (Express Portfolio)/views/Content/home.ejs
@@ -1,3 +1,5 @@
+<!--Mitkumar Malavia, 301214375, 05/10/2021-->
+<!--Home page cosisit of a welcome message, mission statement and a button that redirects to about page.-->
 <header>
     <div class="main-text">
         <p></p>
