--- a/Assignment 1 (Express Portfolio)/views/Content/project.ejs
+++ b/Assignment 1 (Express Portfolio)/views/Content/project.ejs
@@ -1,7 +1,8 @@
+<!--Mitkumar Malavia, 301214375, 05/10/2021-->
 <div class="jumbotron bg-dark pb-1">
     <h2 class="display-4 text-white text-center" style="font-weight:350;">Projects</h2>
 </div>
-
+<!--Project Page template consisting of three containers with image and text-->
 <div class="container-fluid">
     <div class="row">
 
